--- a/extensions/MathLib/MathLib.vcproj
+++ b/extensions/MathLib/MathLib.vcproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="MathLib"
 	ProjectGUID="{BF8E70E9-D5B6-4719-866F-C415F4673B64}"
 	RootNamespace="tt.overdrive~"
@@ -181,6 +181,14 @@
 	<Files>
 		<File
 			RelativePath=".\MathLib.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\source\TTMatrix.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\includes\TTMatrix.h"
 			>
 		</File>
 		<File
