fix windows : copying .mxe in Builds/MaxMSP in Debug and Release mode

--- a/implementations/MaxMSP/jcom.dbap/jcom.dbap.vcproj
+++ b/implementations/MaxMSP/jcom.dbap/jcom.dbap.vcproj
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="jcom.dbap"
-	ProjectGUID="{D2038C88-1F3E-41A5-929D-E86BE6E3F95D}"
+	ProjectGUID="{3DBF9BCD-66D4-4487-848B-1423B0528C5A}"
 	RootNamespace="jcom.ramp"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="0"
@@ -27,7 +27,7 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				CommandLine="copy $(OutDir)\$(TargetFileName) &quot;$(ProjectDir)..\..\..\..\..\Builds&quot;&#x0D;&#x0A;"
+				CommandLine="copy $(OutDir)\$(TargetFileName) &quot;$(ProjectDir)..\..\..\..\..\Builds\MaxMSP&quot;&#x0D;&#x0A;"
 				Outputs="output"
 			/>
 			<Tool
@@ -107,7 +107,7 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				CommandLine="copy $(OutDir)\$(TargetFileName) &quot;$(ProjectDir)..\..\..\..\..\Builds&quot;&#x0D;&#x0A;"
+				CommandLine="copy $(OutDir)\$(TargetFileName) &quot;$(ProjectDir)..\..\..\..\..\Builds\MaxMSP&quot;&#x0D;&#x0A;"
 				Outputs="output"
 			/>
 			<Tool
