--- a/implementations/MaxMSP/pack/jcom.pack.vcproj
+++ b/implementations/MaxMSP/pack/jcom.pack.vcproj
@@ -198,6 +198,10 @@
 			RelativePath="..\..\..\supports\max\TTClassWrapperMax.cpp"
 			>
 		</File>
+		<File
+			RelativePath="..\..\..\supports\max\TTClassWrapperMax.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
