--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ Release
 *.suo
 *.user
 *.tm_build_errors
+*.a
+*.lib
 
 # Files generated from templates by the build script
 JamomaModular.xcconfig
