--- a/implementations/MaxMSP/op/jcom.op.vcproj
+++ b/implementations/MaxMSP/op/jcom.op.vcproj
@@ -195,7 +195,15 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\supports\max\TTClassWrapperMax.cpp"
+			RelativePath="..\..\..\supports\max\maxGraph.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\supports\max\maxGraph.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\supports\max\TTClassWrapperMax.h"
 			>
 		</File>
 	</Files>
