--- a/extensions/SoundfileLib/SoundfileLib.vcproj
+++ b/extensions/SoundfileLib/SoundfileLib.vcproj
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="FilterLib"
+	Name="SoundfileLib"
 	ProjectGUID="{BF8E70E9-D5B6-4719-866F-C415F4673B64}"
 	RootNamespace="tt.overdrive~"
 	Keyword="Win32Proj"
@@ -64,10 +64,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="JamomaDSP.lib JamomaFoundation.lib"
+				AdditionalDependencies="JamomaDSP.lib JamomaFoundation.lib libsndfile-1.lib"
 				OutputFile="$(OutDir)\$(ProjectName).ttdll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\..\library\$(ConfigurationName)&quot;;&quot;$(ProjectDir)..\..\..\Foundation\library\$(ConfigurationName)&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\..\library\$(ConfigurationName)&quot;;&quot;$(ProjectDir)..\..\..\Foundation\library\$(ConfigurationName)&quot;;&quot;$(ProjectDir)libsndfile&quot;"
 				GenerateManifest="false"
 				ModuleDefinitionFile=""
 				GenerateDebugInformation="true"
@@ -141,10 +141,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="JamomaDSP.lib JamomaFoundation.lib"
+				AdditionalDependencies="JamomaDSP.lib JamomaFoundation.lib libsndfile-1.lib"
 				OutputFile="$(OutDir)\$(ProjectName).ttdll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\..\library\$(ConfigurationName)&quot;;&quot;$(ProjectDir)..\..\..\Foundation\library\$(ConfigurationName)&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\..\library\$(ConfigurationName)&quot;;&quot;$(ProjectDir)..\..\..\Foundation\library\$(ConfigurationName)&quot;;&quot;$(ProjectDir)libsndfile&quot;"
 				GenerateManifest="false"
 				ModuleDefinitionFile=""
 				GenerateDebugInformation="true"
@@ -180,179 +180,23 @@
 	</References>
 	<Files>
 		<Filter
-			Name="Filters"
+			Name="Classes"
 			>
 			<File
-				RelativePath=".\TTAllpass.cpp"
+				RelativePath=".\TTSoundfilePlayer.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\TTAllpass.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTBandpassButterworth2.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTBandpassButterworth2.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTBandrejectButterworth2.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTBandrejectButterworth2.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTDCBlock.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTDCBlock.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighMidLowShelf.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighMidLowShelf.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassButterworth1.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassButterworth1.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassButterworth2.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassButterworth2.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassButterworth3.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassButterworth3.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassButterworth4.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassButterworth4.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassLinkwitzRiley2.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassLinkwitzRiley2.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassLinkwitzRiley4.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTHighpassLinkwitzRiley4.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassButterworth1.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassButterworth1.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassButterworth2.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassButterworth2.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassButterworth3.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassButterworth3.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassButterworth4.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassButterworth4.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassFourPole.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassFourPole.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassLinkwitzRiley2.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassLinkwitzRiley2.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassLinkwitzRiley4.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassLinkwitzRiley4.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassOnePole.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassOnePole.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassTwoPole.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTLowpassTwoPole.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TTSvf.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TTSvf.h"
+				RelativePath=".\TTSoundfilePlayer.h"
 				>
 			</File>
 		</Filter>
 		<File
-			RelativePath=".\FilterLib.cpp"
+			RelativePath=".\libsndfile-win\include\sndfile.h"
+			>
+		</File>
+		<File
+			RelativePath=".\SoundfileLib.cpp"
 			>
 		</File>
 	</Files>
