namespace API & xml

--- a/implementations/Example/TestModular2/Makefile
+++ b/implementations/Example/TestModular2/Makefile
@@ -2,7 +2,8 @@
 OS = WIN32
 
 ifeq ($(OS), WIN32)
-	GCC = cl.exe /Od /I "../../../../Foundation/library/includes" /I "../../../../DSP/library/includes" /I "../../../library/source" /I "../../../library/DataspaceLib" /I "../../../library/FunctionLib" /I "../../../library/RampLib" /I "../../../library/PeerObject" /I "../../../supports/objectivemax/SDKs/Max5/c74support/max-includes" /I "../../../../../../../DeviceManager/DeviceManager/" /D "TT_PLATFORM_WIN" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "WIN_VERSION" /D "_CRT_SECURE_NO_WARNINGS" /D "_UNICODE" /D "UNICODE" /Gm /EHsc /RTC1 /MDd /Fd"Debug\vc90.pdb" /W3 /nologo /c /ZI /TP /errorReport:prompt
+	GCC = cl.exe /Od /I "../../../../Foundation/library/includes" /I "../../../../DSP/library/includes" /I "../../../library/source" /I "../../../library/DataspaceLib" /I "../../../library/FunctionLib" /I "../../../library/RampLib" /I "../../../library/PeerObject" /I "../../../supports/objectivemax/SDKs/Max5/c74support/max-includes" /I "../../../../../../../DeviceManager/DeviceManager/" /D "TT_PLATFORM_WIN" /D "WIN32"  /D "_WINDOWS" /D "WIN_VERSION" /D "_CRT_SECURE_NO_WARNINGS" /Fo"Debug\\" /nologo /W3 /c
+#/D "_DEBUG" /errorReport:prompt  /Gm /D "_UNICODE" /D "UNICODE" /RTC1 /EHa /MDd /Fd"Debug\vc90.pdb" /ZI /TP
 else
 	GCC = g++ -c -Wall
 endif
@@ -11,8 +12,8 @@ endif
 all: test
 
 test: main.obj Namespace.obj
-	link.exe /out:test.exe /INCREMENTAL /NOLOGO /LIBPATH:"../../../../Foundation/library/Debug" /LIBPATH:"../../../../DSP/library/Debug" /LIBPATH:"../../../library/Debug" /LIBPATH:"../../../../../../../DeviceManager/DeviceManager/Debug" /MANIFEST /MANIFESTFILE:"Debug\TestModular2.exe.intermediate.manifest" /MANIFESTUAC:"level='asInvoker' uiAccess='false'" /DEBUG /PDB:"c:\Users\Laurent Garnier\Travail\Galamus\NodeLib\Jamoma\Modules\Modular\implementations\Example\TestModular2\Debug\TestModular2.pdb" /SUBSYSTEM:CONSOLE /DYNAMICBASE /NXCOMPAT /MACHINE:X86 /ERRORREPORT:PROMPT main.obj Namespace.obj Advapi32.lib User32.lib JamomaFoundation.lib JamomaDSP.lib TTModular.lib DeviceManager.lib
-	
+		link.exe /out:test.exe Debug/main.obj Debug/Namespace.obj  /NOLOGO /LIBPATH:"../../../../Foundation/library/Debug" /LIBPATH:"../../../../DSP/library/Debug" /LIBPATH:"../../../library/Debug"  JamomaFoundation.lib JamomaDSP.lib TTModular.lib
+#/DEBUG /SUBSYSTEM:CONSOLE /ERRORREPORT:PROMPT /MANIFEST /MANIFESTUAC:"level='asInvoker' uiAccess='false'" /INCREMENTAL /DYNAMICBASE /NXCOMPAT /MACHINE:X86
 main.obj: main.cpp
 	$(GCC) main.cpp
 
