--- a/extensions/FilterLib/FilterLib.vcproj
+++ b/extensions/FilterLib/FilterLib.vcproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
@@ -340,6 +340,14 @@
 			</File>
 			<File
 				RelativePath=".\TTLowpassTwoPole.h"
+				>
+			</File>
+			<File
+				RelativePath=".\TTOnePole.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\TTOnePole.h"
 				>
 			</File>
 			<File
