WindowFunctionLib: adding Kaiser and Blackman windows to the Windows project (fixing the build).

--- a/extensions/WindowFunctionLib/WindowFunctionLib.vcproj
+++ b/extensions/WindowFunctionLib/WindowFunctionLib.vcproj
@@ -191,6 +191,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\BlackmanWindow.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\BlackmanWindow.h"
+				>
+			</File>
+			<File
 				RelativePath=".\HammingWindow.cpp"
 				>
 			</File>
@@ -204,6 +212,14 @@
 			</File>
 			<File
 				RelativePath=".\HanningWindow.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KaiserWindow.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\KaiserWindow.h"
 				>
 			</File>
 			<File
