SoundfileLib: adding SoundfileRecorder class to the Windows project (fixing the build).

--- a/extensions/SoundfileLib/SoundfileLib.vcproj
+++ b/extensions/SoundfileLib/SoundfileLib.vcproj
@@ -190,6 +190,14 @@
 				RelativePath=".\TTSoundfilePlayer.h"
 				>
 			</File>
+			<File
+				RelativePath=".\TTSoundfileRecorder.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\TTSoundfileRecorder.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath=".\libsndfile-win\include\sndfile.h"
