--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "supports"]
 	path = supports
-	url = git://github.com/tap/JamomaSupport.git
+	url = git://github.com/jamoma/JamomaSupport.git
